togetherly update and delete working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- ===== App Info ===== -->
-    <string name="app_name">GirlSpace</string>
+    <string name="app_name">Togetherly</string>
 
     <!-- ===========================================================
          ✅ GOOGLE SIGN-IN
